--- a/Zbang.Zbox.Infrastructure/Zbang.Zbox.Infrastructure.csproj
+++ b/Zbang.Zbox.Infrastructure/Zbang.Zbox.Infrastructure.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Query\IUniversityWithCode.cs" />
     <Compile Include="Range.cs" />
     <Compile Include="RegisterIoc.cs" />
+    <Compile Include="Repositories\DocumentDbModelAttribute.cs" />
     <Compile Include="Repositories\IDirty.cs" />
     <Compile Include="Repositories\IDocumentDbRepository.cs" />
     <Compile Include="Repositories\ISoftDelete.cs" />
