--- a/Zbang.Zbox.Infrastructure.Azure/Zbang.Zbox.Infrastructure.Azure.csproj
+++ b/Zbang.Zbox.Infrastructure.Azure/Zbang.Zbox.Infrastructure.Azure.csproj
@@ -111,7 +111,7 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="StorageModule.cs" />
     <Compile Include="ITableProvider.cs" />
-    <Compile Include="MediaServices\MediaSevicesProvider.cs" />
+    <Compile Include="MediaServices\MediaServicesProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueExtension.cs">
       <SubType>Code</SubType>
