--- a/Zbang.Zbox.ReadServices/packages.config
+++ b/Zbang.Zbox.ReadServices/packages.config
@@ -6,4 +6,5 @@
   <package id="EnterpriseLibrary.TransientFaultHandling.Data" version="6.0.1304.1" targetFramework="net451" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net462" />
 </packages>
