--- a/Zbang.Zbox.InfrastructureTests/Zbang.Zbox.InfrastructureTests.csproj
+++ b/Zbang.Zbox.InfrastructureTests/Zbang.Zbox.InfrastructureTests.csproj
@@ -54,6 +54,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DateTimeTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zbang.Zbox.Infrastructure\Zbang.Zbox.Infrastructure.csproj">
