--- a/Zbang.Zbox.WorkerRoleSearch/packages.config
+++ b/Zbang.Zbox.WorkerRoleSearch/packages.config
@@ -28,6 +28,7 @@
   <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net462" />
   <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net462" />
   <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net451" />
+  <package id="Microsoft.Spatial" version="7.2.0" targetFramework="net462" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.Management.Scheduler" version="6.2.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
