--- a/Zbang.Cloudents.Jared/Web.config
+++ b/Zbang.Cloudents.Jared/Web.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
   <connectionStrings>
     <add name="ZBox" connectionString="Server=tcp:on0rodxe8f.database.windows.net;Database=ZBoxNew;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
     <!--<add name="MS_TableConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Zbang.Cloudents.Jared-20170215040113.mdf;Initial Catalog=aspnet-Zbang.Cloudents.Jared-20170215040113;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
@@ -36,10 +39,16 @@
         </providers>
       </outputCache>
     </caching>-->
+  <httpModules>
+  <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
+  </httpModules>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-    <modules runAllManagedModulesForAllRequests="true" />
+    <modules runAllManagedModulesForAllRequests="true">
+      <remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
+    </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
@@ -121,6 +130,10 @@
         <assemblyIdentity name="StackExchange.Redis.StrongName" publicKeyToken="c219ff1ca8c2ce46" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.4.0" newVersion="1.2.4.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <!--<entityFramework>
@@ -155,4 +168,15 @@
       </bindingExtensions>
     </extensions>
   </system.serviceModel>
+  <log4net>
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="aiAppender" />
+    </root>
+    <appender name="aiAppender" type="Microsoft.ApplicationInsights.Log4NetAppender.ApplicationInsightsAppender, Microsoft.ApplicationInsights.Log4NetAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%message%newline" />
+      </layout>
+    </appender>
+  </log4net>
 </configuration>
