--- a/Zbang.Cloudents.Jared/packages.config
+++ b/Zbang.Cloudents.Jared/packages.config
@@ -5,6 +5,18 @@
   <package id="Autofac.SignalR" version="3.0.2" targetFramework="net462" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net462" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net45" />
+  <package id="Google.Apis" version="1.19.0" targetFramework="net462" />
+  <package id="Google.Apis.Core" version="1.19.0" targetFramework="net462" />
+  <package id="Google.Apis.Customsearch.v1" version="1.19.0.466" targetFramework="net462" />
+  <package id="log4net" version="2.0.5" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.Log4NetAppender" version="2.2.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.ServiceBus3" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
@@ -34,4 +46,5 @@
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.4.403061554" targetFramework="net462" />
   <package id="System.Spatial" version="5.8.2" targetFramework="net462" />
   <package id="WindowsAzure.ServiceBus" version="4.1.2" targetFramework="net462" />
+  <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net462" />
 </packages>
