--- a/Zbang.Zbox.Infrastructure/packages.config
+++ b/Zbang.Zbox.Infrastructure/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="4.6.0" targetFramework="net462" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
+  <package id="Microsoft.Spatial" version="7.2.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net462" />
   <package id="StackExchange.Redis" version="1.2.4" targetFramework="net462" />
