--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -1241,7 +1241,9 @@
     <Content Include="Images\Alex\apple.png" />
     <Content Include="Images\Alex\coffee2small.png" />
     <Content Include="Images\Alex\coffee_small.png" />
+    <Content Include="Images\Alex\Docs.png" />
     <Content Include="Images\Alex\downArrow.svg" />
+    <Content Include="Images\Alex\FC.png" />
     <Content Include="Images\Alex\headphone.png" />
     <Content Include="Images\Alex\iphone.png" />
     <Content Include="Images\Alex\logo-spitball-copy.svg" />
@@ -1263,6 +1265,8 @@
     <Content Include="Images\Alex\section_bg.png" />
     <Content Include="Images\Alex\spinner_small.png" />
     <Content Include="Images\Alex\sun_glasses_small.png" />
+    <Content Include="Images\Alex\tutor.png" />
+    <Content Include="Images\Alex\unnamed.png" />
     <Content Include="Images\bx_loader.gif" />
     <Content Include="Images\ClassNotes\items\en\1.png" />
     <Content Include="Images\ClassNotes\items\en\10.png" />
@@ -1475,8 +1479,6 @@
     <Content Include="Images\Site\user_4.png" />
     <Content Include="Images\textEditor.svg" />
     <Content Include="Images\user.svg" />
-    <Content Include="Js\Alex\jquery.fullPage.min.js" />
-    <Content Include="Js\Alex\velocity.min.js" />
     <Content Include="Js\Alex\normal.js" />
     <Content Include="Js\app.js" />
     <Content Include="Js\app.route.js" />
