--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -816,8 +816,8 @@
     <Content Include="bower_components\textAngular\dist\textAngular.rtl.css">
       <DependentUpon>textAngular.css</DependentUpon>
     </Content>
-    <Content Include="Content\Alex\home.css" />
-    <Content Include="Content\Alex\jquery.fullPage.css" />
+    <Content Include="Content\alex\home.css" />
+    <Content Include="Content\alex\home.rtl.css" />
     <Content Include="Content\angular-material.css" />
     <Content Include="Content\angular-material.layout-attributes.css" />
     <Content Include="Content\angular-material.layouts.css" />
@@ -1239,14 +1239,31 @@
     <Content Include="Images\Alex\appIcon%403x.png" />
     <Content Include="Images\Alex\appIcon.png" />
     <Content Include="Images\Alex\apple.png" />
+    <Content Include="Images\Alex\apple_360px.png" />
+    <Content Include="Images\Alex\Book_small_550px.png" />
+    <Content Include="Images\Alex\calculator_380px.png" />
+    <Content Include="Images\Alex\calculator_new.png" />
     <Content Include="Images\Alex\coffee2small.png" />
+    <Content Include="Images\Alex\coffee2_500px.png" />
     <Content Include="Images\Alex\coffee_small.png" />
     <Content Include="Images\Alex\Docs.png" />
+    <Content Include="Images\Alex\Docs_240px.png" />
+    <Content Include="Images\Alex\Doc_small_45px.png" />
+    <Content Include="Images\Alex\doc_small_new.png" />
     <Content Include="Images\Alex\downArrow.svg" />
     <Content Include="Images\Alex\FC.png" />
+    <Content Include="Images\Alex\FC_240px.png" />
     <Content Include="Images\Alex\headphone.png" />
+    <Content Include="Images\Alex\headphone_620px.png" />
     <Content Include="Images\Alex\iphone.png" />
+    <Content Include="Images\Alex\iphone_300px.png" />
     <Content Include="Images\Alex\logo-spitball-copy.svg" />
+    <Content Include="Images\Alex\mac_small_790.png" />
+    <Content Include="Images\Alex\mac_small_900px.png" />
+    <Content Include="Images\Alex\notebook_pencil_small_750px.png" />
+    <Content Include="Images\Alex\pizza_small_700px.png" />
+    <Content Include="Images\Alex\red_folder_850px.png" />
+    <Content Include="Images\Alex\red_folder_new.png" />
     <Content Include="Images\Alex\slide1.png" />
     <Content Include="Images\Alex\book_small.png" />
     <Content Include="Images\Alex\calculator.png" />
@@ -1259,14 +1276,19 @@
     <Content Include="Images\Alex\slidedown%402x.png" />
     <Content Include="Images\Alex\slidedown%403x.png" />
     <Content Include="Images\Alex\slidedown.png" />
+    <Content Include="Images\Alex\spinner_small_350.png" />
     <Content Include="Images\Alex\sp_notebook.png" />
     <Content Include="Images\Alex\pizza_small.png" />
     <Content Include="Images\Alex\red_folder.png" />
     <Content Include="Images\Alex\section_bg.png" />
     <Content Include="Images\Alex\spinner_small.png" />
+    <Content Include="Images\Alex\sp_notebook_new.png" />
     <Content Include="Images\Alex\sun_glasses_small.png" />
+    <Content Include="Images\Alex\sun_glasses_small_350px.png" />
     <Content Include="Images\Alex\tutor.png" />
+    <Content Include="Images\Alex\tutor_240px.png" />
     <Content Include="Images\Alex\unnamed.png" />
+    <Content Include="Images\Alex\unnamed_240px.png" />
     <Content Include="Images\bx_loader.gif" />
     <Content Include="Images\ClassNotes\items\en\1.png" />
     <Content Include="Images\ClassNotes\items\en\10.png" />
@@ -1479,7 +1501,7 @@
     <Content Include="Images\Site\user_4.png" />
     <Content Include="Images\textEditor.svg" />
     <Content Include="Images\user.svg" />
-    <Content Include="Js\Alex\normal.js" />
+    <Content Include="Js\alex\normal.js" />
     <Content Include="Js\app.js" />
     <Content Include="Js\app.route.js" />
     <Content Include="Js\CDNFallbackWithoutAngular.js" />
@@ -1517,7 +1539,7 @@
     <Content Include="Js\signin\itemGallery.js" />
     <Content Include="Js\signin\layout.js" />
     <Content Include="Js\signin\staticPages.js" />
-    <Content Include="Js\Alex\helpers.js" />
+    <Content Include="Js\alex\helpers.js" />
     <TypeScriptCompile Include="Js\app.config.ts" />
     <TypeScriptCompile Include="Js\components\account\account.service.ts" />
     <TypeScriptCompile Include="Js\components\account\unregisterShow.directive.ts" />
