--- a/Zbang.Cloudents.Mvc4WebRole/Web.Release.config
+++ b/Zbang.Cloudents.Mvc4WebRole/Web.Release.config
@@ -27,30 +27,34 @@
   </system.diagnostics>
   <system.web>
     <httpCookies requireSSL="true" xdt:Transform="Replace" domain="spitball.co" />
-    <compilation xdt:Transform="RemoveAttributes(debug)" />
-    <caching >
-      <outputCache defaultProvider="CloudentsOutputCacheProvider" xdt:Transform="Insert">
-        <providers>
-          <add name="CloudentsOutputCacheProvider" type="Zbang.Cloudents.Mvc4WebRole.Helpers.CloudentsOutputCacheProvider, Zbang.Cloudents.Mvc4WebRole"
-            host="zboxcache.redis.cache.windows.net"
-            port="6380"
-            applicationName="cloudents"
-            accessKey="CxHKyXDx40vIS5EEYT0UfnVIR1OJQSPrNnXFFdi3UGI="
-            ssl="true" />
-        </providers>
-      </outputCache>
-      <outputCacheSettings xdt:Transform="Replace">
-        <outputCacheProfiles>
-          <add name="NoCache" duration="0" varyByParam="none" location="Server" noStore="true" />
-          <add name="PartialPage" duration="86400" location="ServerAndClient" varyByParam="lang;version"  />
-          <add name="FullPage" duration="86400" varyByParam="none" varyByCustom="Auth;Lang"/>
-          <add name="HomePage" duration="86400" varyByParam="invId;universityName;step" varyByCustom="Auth;Lang;Uni;Promo" location="Server"/>
-          <add name="ItemPage" duration="3600" varyByParam="itemid" varyByCustom="Lang;Auth;" location="Server" />
-          <add name="BoxPage" duration="3600" varyByParam="boxId;part" varyByCustom="Lang;Auth;" location="Server" />
-        </outputCacheProfiles>
-      </outputCacheSettings>
-    </caching>
-  </system.web>
+    <compilation xdt:Transform="Replace" targetFramework="4.6.2">
+      <assemblies>
+        <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </assemblies>
+    </compilation>
+      <caching >
+        <outputCache defaultProvider="CloudentsOutputCacheProvider" xdt:Transform="Insert">
+          <providers>
+            <add name="CloudentsOutputCacheProvider" type="Zbang.Cloudents.Mvc4WebRole.Helpers.CloudentsOutputCacheProvider, Zbang.Cloudents.Mvc4WebRole"
+              host="zboxcache.redis.cache.windows.net"
+              port="6380"
+              applicationName="cloudents"
+              accessKey="CxHKyXDx40vIS5EEYT0UfnVIR1OJQSPrNnXFFdi3UGI="
+              ssl="true" />
+          </providers>
+        </outputCache>
+        <outputCacheSettings xdt:Transform="Replace">
+          <outputCacheProfiles>
+            <add name="NoCache" duration="0" varyByParam="none" location="Server" noStore="true" />
+            <add name="PartialPage" duration="86400" location="ServerAndClient" varyByParam="lang;version"  />
+            <add name="FullPage" duration="86400" varyByParam="none" varyByCustom="Auth;Lang"/>
+            <add name="HomePage" duration="86400" varyByParam="invId;universityName;step" varyByCustom="Auth;Lang;Uni;Promo" location="Server"/>
+            <add name="ItemPage" duration="3600" varyByParam="itemid" varyByCustom="Lang;Auth;" location="Server" />
+            <add name="BoxPage" duration="3600" varyByParam="boxId;part" varyByCustom="Lang;Auth;" location="Server" />
+          </outputCacheProfiles>
+        </outputCacheSettings>
+      </caching>
+    </system.web>
   <system.webServer >
     <!-- this is making issue with cache header-->
     <!--<caching>
@@ -116,8 +120,9 @@
         </rule>
       </rules>
     </rewrite>
-   
-    <httpCompression> <!--need to be on application host-->
+
+    <httpCompression>
+      <!--need to be on application host-->
       <staticTypes>
         <add mimeType="text/*" enabled="true" />
         <add mimeType="message/*" enabled="true" />
